public class TextUI {

    public void displayMsg(String msg){
        System.out.println(msg);
    }

}
